--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
+    "react-router-dom": "^7.3.0",
+    "zod": "^3.24.2"
   }
 }
